--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -27,7 +27,7 @@
         app:showAsAction="never"/>
 
     <item
-        android:id="@+id/menu_ayuda"
-        android:title="Ayuda"
+        android:id="@+id/gestion_producto"
+        android:title="Gestion Producto"
         app:showAsAction="never"/>
 </menu>
