--- a/app/src/main/res/layout/activity_gestion_producto.xml
+++ b/app/src/main/res/layout/activity_gestion_producto.xml
@@ -163,6 +163,13 @@
                 android:text="Eliminar Producto"
                 android:padding="14dp"
                 android:layout_marginBottom="10dp"/>
+            <include
+                layout="@layout/custom_back_button"
+                android:id="@+id/button_regresar_management"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
