--- a/app/src/main/res/layout/activity_gestion_venta.xml
+++ b/app/src/main/res/layout/activity_gestion_venta.xml
@@ -226,10 +226,10 @@
                 android:layout_marginBottom="10dp"/>
 
             <Button
-                android:id="@+id/btnCancelarVenta"
+                android:id="@+id/btnEliminarVenta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cancelar Venta"
+                android:text="Eliminar Venta"
                 android:padding="14dp"/>
         </LinearLayout>
     </ScrollView>
