--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -1,44 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ProductsListActivity">
-
-    <!-- Título de la lista -->
-    <TextView
-        android:id="@+id/txtTitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lista de Productos"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
-    <!-- RecyclerView para mostrar la lista -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_below="@id/txtTitulo"
-        android:layout_above="@id/button_regresar3"
-        android:layout_marginTop="10dp"/>
-
-    <!-- Botón de regreso reutilizable en la parte inferior -->
-    <include
-        layout="@layout/custom_back_button"
-        android:id="@+id/button_regresar3"
-        android:layout_width="175dp"
-        android:layout_height="65dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"/>
-
-</RelativeLayout>
+<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/main"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/white"    tools:context=".ProductsListActivity">    <!-- Título de la lista -->    <TextView        android:id="@+id/txtTitulo"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="Lista de Productos"        android:textSize="28sp"        android:textStyle="bold"        android:textColor="@color/black"        android:gravity="center"        android:layout_centerHorizontal="true"        android:layout_marginTop="20dp"/>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal">        <EditText            android:id="@+id/etCodigoBusqueda"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:hint="Código del producto"            android:inputType="text"            android:padding="12dp"            android:background="@drawable/edit_text_background"            android:layout_marginTop="60dp"            android:layout_marginLeft="10dp"/>        <Button            android:id="@+id/btnBuscar"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="Buscar"            android:padding="14dp"            android:layout_marginLeft="12dp"            android:layout_marginTop="60dp"            android:layout_marginRight="10dp"/>    </LinearLayout>    <!-- RecyclerView para mostrar la lista -->    <androidx.recyclerview.widget.RecyclerView        android:id="@+id/recyclerView"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:padding="16dp"        android:layout_below="@id/txtTitulo"        android:layout_above="@id/button_regresar3"        android:layout_marginTop="50dp"/>    <!-- Botón de regreso reutilizable en la parte inferior -->    <include        layout="@layout/custom_back_button"        android:id="@+id/button_regresar3"        android:layout_width="175dp"        android:layout_height="65dp"        android:layout_centerHorizontal="true"        android:layout_alignParentBottom="true"        android:layout_marginBottom="20dp"/></RelativeLayout>
